--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.7
 jobs:
   build-android-gtest:
     docker:
@@ -13,7 +15,7 @@ jobs:
           name: Run build
           command: |
             cd android-gtest
-            ./gradlew build
+            ./gradlew build jacocoTestReport
       - save_cache:
           paths:
             - ~/.gradle/wrapper
@@ -24,11 +26,14 @@ jobs:
           key: v1-gradle-cache-{{ checksum "android-gtest/build.gradle" }}
       - store_test_results:
           path: android-gtest/build/test-results/test
+      - codecov/upload:
+          file: android-gtest/build/reports/jacoco/test/jacocoTestReport.xml
       - store_artifacts:
           path: android-gtest/build/test-results/test
           when: always
       - store_artifacts:
           path: android-gtestbuild/libs
+
 workflows:
   version: 2
   workflow:
