--- a/android-gtest/build.gradle
+++ b/android-gtest/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'jacoco'
     id 'java'
 }
 
@@ -14,4 +15,11 @@ repositories {
 dependencies {
     compile gradleApi()
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jacocoTestReport {
+    reports {
+        html.enabled true
+        xml.enabled true
+    }
 }
